resultをwinnerに修正
